bk_ida/gccida/c3/fold_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3804:4: error: expected ';' after expression
rtx v28; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3804:5: error: use of undeclared identifier 'v28'
rtx v28; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3812:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3812:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3813:4: error: expected ';' after expression
rtx const_rtx; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3813:5: error: use of undeclared identifier 'const_rtx'
rtx const_rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3823:4: error: expected ';' after expression
rtx v47; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3823:5: error: use of undeclared identifier 'v47'
rtx v47; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3827:4: error: expected ';' after expression
rtx v51; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3827:5: error: use of undeclared identifier 'v51'
rtx v51; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3830:4: error: expected ';' after expression
rtx v54; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3830:5: error: use of undeclared identifier 'v54'
rtx v54; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3864:6: error: use of undeclared identifier 'v88'
rtx *v88; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3877:4: error: expected ';' after expression
rtx v101; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3877:5: error: use of undeclared identifier 'v101'
rtx v101; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3894:4: error: expected ';' after expression
rtx v118; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3894:5: error: use of undeclared identifier 'v118'
rtx v118; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3908:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v132; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/cse.c:3909:4: error: expected ';' after expression
rtx v133; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_rtx/src/obj/cse.o] Error 1
